[package]
name = "lunatic-cached-process"
version = "0.1.1"
edition = "2021"
description = "Cached process lookups with lunatic."
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
keywords = ["lunatic", "cache", "lookup"]
categories = ["memory-management", "wasm"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/tqwewe/lunatic-cached-process"

[dependencies]
lunatic = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
paste = "1.0.11"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-wasi"]
